Move examples into bindings project